fix: grid overflow

--- a/packages/ui/src/assets/scss/main.scss
+++ b/packages/ui/src/assets/scss/main.scss
@@ -43,6 +43,10 @@ body {
     margin: 40px 0;
     display: grid;
     row-gap: 40px;
+
+    > * {
+      min-width: 0;
+    }
   }
 
   > footer {
